--- a/src/styles/chat.scss
+++ b/src/styles/chat.scss
@@ -27,7 +27,7 @@ img {
   
   .sent {
     background-color: #395dff;
-    color: black;
+    color: white;
     border-top-right-radius: 1000px;
     flex-direction: row-reverse;
     padding: 20px 20px 0 10px;
@@ -38,6 +38,7 @@ img {
   .received {
     border: 1px solid lightgray;
     background-color: #FAFAFA;
+    color: black;
     border-top-left-radius: 1000px;
     float: left;
     color:black;
